2019-12-17  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.1-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.1-alpha03: Ignite';git push
	git tag -a 4.9.1-alpha03 -m 'automake libnco.la;ncclimo glb_avg';git push --tags

	* Correct automake syntax from -lnco to -l../nco/libnco.la (per bug #118 from Daniel Macks)

	* ncclimo global average timeseries working prototype with --glb_avg

2019-12-16  Charlie Zender  <zender@uci.edu>

	* Add stubs for ncclimo global average timeseries

	* Tweak _NCProperties message

2019-12-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.1-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.1-alpha02: Utthita Trikonasana';git push
	git tag -a 4.9.1-alpha02 -m 'autoconf EXTERNL netcdf_mem.h;nco_copy_att() _NCProperties;ncremap nco_con dfl;';git push --tags

	* Modify configure.ac to define EXTERNL from netcdf.h during autoconf check of netcdf_mem.h
	Thanks to Matthew Thompson and Dave Allured for reporting and solving the issue

	* Surgically prevent nco_copy_att() from attempting to copy _NCProperties

	* Henry restored functionality to edg_typ and ply_tri_mth options

2019-12-10  Charlie Zender  <zender@uci.edu>

	* Print names of attribute and variables/groups when nco_copy_att() fails

2019-12-08  Charlie Zender  <zender@uci.edu>

	* ncremap add stubs for MOAB-Tempest executable mbtempest

2019-12-06  Charlie Zender  <zender@uci.edu>

	* Re-do logic for invoking small circle triangles

2019-12-05  Charlie Zender  <zender@uci.edu>

	* ncremap change default regridder algorithm from ESMF bilinear to NCO nco_con

	* NCO 4.9.1-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.1-alpha01: Massage';git push
	git tag -a 4.9.1-alpha01 -m 'Functionally identical to 4.9.0';git push --tags

2019-12-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.0: Balasana';git push