@@ -38,6 +38,25 @@ A. ncremap changes the default regridder algorithm from ESMF
    http://nco.sf.net/nco.html#alg_typ
    http://nco.sf.net/nco.html#ncremap
 
+B. ncclimo can now output spatial-average timeseries.
+   The new --glb_avg (or --global_average) option causes ncclimo to
+   perform a spatial mean over the timeseries constructed from the
+   input data.
+   ls *mdl*.nc | ncclimo --glb_avg -s 1979 -e 1981 --drc_out=drc_out
+   http://nco.sf.net/nco.html#ncclimo
+   http://nco.sf.net/nco.html#glb_avg
+
+C. ncpdq has a new map, flt_dbl, to convert single-precision to
+   double-precision floating point variables. The resulting variables
+   are not packed. All single-precision variables, including
+   coordinates, are promoted. Some software requires geospatial data
+   in double precision, and this feature simplifies the dataset
+   conversion. 
+   ncpdq -M flt_dbl in.nc out.nc
+   ncpdq -M sgl_dbl in.nc out.nc
+   http://nco.sf.net/nco.html#flt_dbl
+   http://nco.sf.net/nco.html#ncpdq
+
 BUG FIXES:
 
 A. Fix a difficulty that caused Intel compilers to fail to build NCO.
