@@ -62,8 +62,10 @@ enum nco_pck_map{ /* [enm] Packing conversion map */
 			  [NC_DOUBLE,NC_FLOAT]->NC_CHAR, [NC_INT,NC_SHORT,NC_CHAR,NC_BYTE]->unaltered */
   nco_pck_map_flt_byt, /* 7 [enm] Pack floating precision types to NC_BYTE, pack nothing else
 			  [NC_DOUBLE,NC_FLOAT]->NC_BYTE, [NC_INT,NC_SHORT,NC_CHAR,NC_BYTE]->unaltered */
-  nco_pck_map_dbl_flt  /* 8 [enm] Convert (do not pack) floating precision type NC_DOUBLE to NC_FLOAT, pack nothing
+  nco_pck_map_dbl_flt, /* 8 [enm] Convert (do not pack) floating precision type NC_DOUBLE to NC_FLOAT, pack nothing
 			  [NC_DOUBLE]->NC_FLOAT, [NC_FLOAT,NC_INT,NC_SHORT,NC_CHAR,NC_BYTE]->unaltered */
+  nco_pck_map_flt_dbl  /* 9 [enm] Convert (do not pack) floating precision type NC_FLOAT to NC_DOUBLE, pack nothing
+			  [NC_FLOAT]->NC_DOUBLE, [NC_DOUBLE,NC_INT,NC_SHORT,NC_CHAR,NC_BYTE]->unaltered */
 }; /* end nco_pck_map enum */
 
 #ifdef __cplusplus
